# meiksh

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cursor/rules/: cargo-fmt-before-commit.mdc  rust-checks-before-commit.mdc
docs/: COVERAGE.md  IMPLEMENTATION_POLICY.md  LOCALE.md  PERFORMANCE_IMPROVEMENT.md  README.md  TEST_WRITING_GUIDE.md  UNIT_TEST_WRITING_GUIDE.md  benchmarks.md  coverage.md  fetch-posix-docs.sh  html_to_md.rs  implementation-policy.md  parsing-and-expansion-pipeline.md  performance-plan.md  posix-manifest.txt  spec-matrix.md  test-suite-full.md
docs/features/: README.md  emacs-editing-mode.md  inputrc.md  ps1-prompt-extensions.md  startup-files.md
docs/requirements/: README.md  conventions.md  gap-register.md  standards-inventory.md
scripts/: audit-qualifiers.py  bench.sh  check-libc-boundary.sh  check-posix-docs.sh  coverage.sh  extract-posix-obligations.py  gen_bench.py
src/: arena.rs  bstr.rs  builtin.rs  exec.rs  expand.rs  hash.rs  interactive.rs  lib.rs  main.rs  shell.rs  syntax.rs  sys.rs
src/builtin/: alias.rs  bind.rs  cd.rs  command.rs  dot.rs  echo.rs  eval.rs  exec.rs  exit_builtin.rs  fc.rs  flow.rs  getopts.rs  jobs.rs  kill.rs  mod.rs  printf.rs  pwd.rs  read.rs  set.rs  test_builtin.rs  times.rs  trap.rs  ulimit.rs  umask.rs  vars.rs
src/exec/: and_or.rs  command.rs  mod.rs  pipeline.rs  process.rs  program.rs  redirection.rs  render.rs  scratch.rs  simple.rs  test_support.rs
src/expand/: arithmetic.rs  core.rs  mod.rs  (+8 more)
tests/: check_matrix_integrity.rs  epty_parser.rs  expect_pty.rs  json.rs  md_parser.rs  pty.rs
(+3661 files in other folders)
