[package]
name = "meiksh"
version = "0.1.0"
edition = "2024"
autotests = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
libc = "0.2.183"

[[test]]
name = "integration_basic"
path = "tests/integration/basic.rs"

[[test]]
name = "spec_compliance"
path = "tests/spec/runner.rs"
test = false

[[bin]]
name = "pty"
path = "tests/pty.rs"

[[bin]]
name = "expect_pty"
path = "tests/expect_pty.rs"
